<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:id="@+id/sett" android:checkableBehavior="single">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/app_name" />
    </group>
    <group android:id="@+id/edit" android:checkableBehavior="single">
        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/action_share"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_new"
            android:title="@string/action_new"
            android:alphabeticShortcut="N"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_load"
            android:title="@string/action_open"
            android:alphabeticShortcut="O"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_save"
            android:alphabeticShortcut="S"
            android:title="@string/action_save" />
        <item
            android:id="@+id/action_save_as"
            android:title="@string/action_save_as"
            tools:ignore="UnusedAttribute" />
        <item
            android:id="@+id/action_lock_swipe"
            android:checkable="true"
            android:title="@string/action_lock_swipe"
            app:showAsAction="never" />
    </group>

</menu>
