<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.moaiplanner.model.SettingsViewModel" />
    </data>

<ScrollView
    tools:context=".ui.main.OptionsFragment"
    tools:layout="@layout/options_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingBottom="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="69dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profilepic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/account" />

            <!-- Contenuti della scheda qui -->

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/layoutNotifiche"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            app:layout_constraintVertical_bias="0.052" />


        <TextView
            android:id="@+id/usermail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifica_immagine"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/layoutNotifiche"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usermail"
            app:layout_constraintVertical_bias="0.181" />

        <TextView
            android:id="@+id/notifiche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/generale"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/layoutNotifiche"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:id="@+id/layoutNotifiche"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="160dp"
            android:background="@drawable/custom_layout"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view">


            <TextView
                android:id="@+id/notification_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abilita_le_notifiche"
                android:layout_weight="2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/notification_switch"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                app:thumbTint="@color/light_gray"
                android:checked="@{viewModel.notifiche}"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:trackTint="@drawable/custom_switch"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/layoutTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_layout"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutNotifiche">


            <TextView
                android:id="@+id/theme_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/abilita_tema_chiaro"
                android:layout_weight="2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/theme_switch"
                android:layout_width="320dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                app:thumbTint="@color/light_gray"
                app:trackTint="@drawable/custom_switch"
                android:checked="@{viewModel.lightMode}"
                android:minWidth="48dp"
                android:minHeight="48dp" />

        </LinearLayout>



        <TextView
            android:id="@+id/tomato_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/tomato"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/layoutSessione"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/layoutSessione"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_layout"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutTheme">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/minuti_pomodoro"
                android:layout_weight="2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/durataPomodoro"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="25"
                android:ems="3"
                android:hint="@string/_25"
                android:inputType="number"
                android:text="@{viewModel.session}"
                android:textAlignment="center"
                android:textColorHint="#78909C"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPausa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_layout"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutSessione">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/minuti_pausa"
                android:layout_weight="2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/durataPausa"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:autofillHints="5"
                android:ems="3"
                android:hint="@string/_5"
                android:inputType="number"
                android:text="@{viewModel.pausa}"
                android:textAlignment="center"
                android:textColorHint="#78909C"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_layout"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPausa">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/numero_round"
                android:layout_weight="2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numeroRound"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@{viewModel.round}"
                android:textAlignment="center"
                android:textStyle="bold"
                android:ems="3"
                android:textColorHint="#78909C"
                android:inputType="number"
                android:hint="@string/_1"
                android:autofillHints="1" />

        </LinearLayout>


        <TextView
            android:id="@+id/security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/sicurezza"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/layoutEmail"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_layout"
            android:orientation="horizontal"

            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutRound">

            <TextView
                android:id="@+id/email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_weight="2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonChangeEmail"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/cambia"

                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/layoutSessione"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.181"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_layout"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">


            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_weight="2"

                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonChangePass"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/cambia"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/layoutNotifiche"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.181" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_layout"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword">


            <TextView
                android:id="@+id/username_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_weight="2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonChangeName"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/cambia"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/layoutPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.181" />


        </LinearLayout>


        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="108dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/colorOnSecondary"
            android:text="@string/log_out"
            android:textColor="?android:attr/textColorSecondary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutName" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>
</layout>